--- a/project2.css
+++ b/project2.css
@@ -168,7 +168,8 @@ nav{
   transform: translate(-50%, -50%);
   z-index: 1;
   text-align: center;
-  font-size: 48px;
+  font-size: 40px;
+  font-weight: 700;
   font-family: sans-serif;
   color: white;
   opacity: 0;
@@ -181,5 +182,5 @@ nav{
 }
 
 .club-image-container:hover .club-image {
-  opacity: 0.6;
+  opacity: 0.3;
 }
