--- a/home.css
+++ b/home.css
@@ -7,33 +7,6 @@
      background-size: cover;
      font-family: sans-serif;
 }
-
-.page2{
-     width: 100%;
-     height: 100vh;
-}
-
-.header2{
-     width: 50%;
-     float: right;
-     height: 100vh;
-     background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.2)),
-                       url("images/madrid-news.jpg");
-     font-family: sans-serif
-}
-.header3{
-     width: 50%;
-     float: left;
-     height: 100vh;
-     background-color: black;
-     font-family: sans-serif
-}
-.page03{
-  width: 100%;
-  height: 100vh;
-  background-color: black;
-}
-
 nav{
   width: 100%;
   height: 80px;
@@ -55,8 +28,9 @@ nav{
   text-decoration: none;
   color: white;
   padding: 10px 20px;
-  font-size: 14px;
+  font-size: 15px;
   position: relative;
+  font-weight: 700;
 }
 
 .menu a:before{
@@ -74,12 +48,13 @@ nav{
   width: 90%;
 }
 .register a{
+  
   position : relative;
-  left: 50%;
+  left: 105%;
   text-decoration: none;
   color: white;
   padding: 10px 20px;
-  font-size: 17px;
+  font-size: 14px;
   background: indianred;
   border-radius: 8px;
   transition: 0.4s
@@ -118,6 +93,28 @@ nav{
    background: transparent;
    border: 1px solid indianred;
 }
+/*page2*/
+.page2{
+  width: 100%;
+  height: 100vh;
+}
+/*page2 (right)*/
+.header2{
+  width: 50%;
+  float: right;
+  height: 100vh;
+  background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.2)),
+                    url("images/madrid-news.jpg");
+  font-family: sans-serif
+}
+/*page2(left)*/
+.header3{
+  width: 50%;
+  float: left;
+  height: 100vh;
+  background-color: black;
+  font-family: sans-serif
+}
 
 .h-txt2 h1{
   font-size: 2em;
@@ -146,21 +143,42 @@ nav{
   color: white;
 }
 
-.fixtures {
-  width: 50%;
-  border: 1px solid black;
-  padding: 25px 50px 75px 100px;
-  background-color: lightblue;
+/*page3*/
+.page3{
+  background-color: black;
+  padding: 40px 30px 115px 30px ;
 }
-
-/* The container for the image and text */
+.para{
+  padding: 20px;
+  color:white;
+  font-size: 2em;
+  font-family: sans-serif;
+  font-weight: 800;
+  text-align: center;
+}
+.polaroid{
+  padding: 10px 0px 0px 0px;
+  display: flex;
+}
+.polaroid-inner {
+  width: 25%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+  padding: 20px;
+  
+}
+      
+.polaroid-container {
+  padding: 10px;
+  background-color: rgb(179, 204, 235);
+}
+/*page4*/
 .club-image-container {
   position: relative;
   display: inline-block;
   background-color: black;
 }
 
-/* The text over the image */
 .club-text {
   position: absolute;
   top: 50%;
@@ -176,11 +194,59 @@ nav{
   transition: opacity 0.5s;
 }
 
-/* Hover effect */
 .club-image-container:hover .club-text {
   opacity: 1;
 }
 
 .club-image-container:hover .club-image {
   opacity: 0.3;
+}
+
+.footer{
+  background-color: black;
+  width: 100%;
+  height: 100vh;
+}
+
+@media (max-width:500px) {
+  nav{
+    
+  }
+  .menu a{
+    text-align: right;
+  }
+  .register a{
+    display: none;
+  }
+  .header1{
+    width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.2)),
+                      url("images/madrid-cover2.jpg");
+    background-size: cover;
+    font-family: sans-serif;
+  }
+  .h-txt h1{
+    display: none;
+  }
+  .header2{
+    display: none;
+  }
+  .header3{
+    width: 100%;
+  }
+  .h-txt2 p{
+    display: none;
+  }
+  .page3{
+    padding: 0px;
+  }
+  .polaroid{
+    display: block;
+    position: relative;
+    left: 50px;
+  }
+  .polaroid-inner {
+    width: 75%;
+  }
 }
