--- a/home.css
+++ b/home.css
@@ -103,10 +103,9 @@ nav{
   width: 50%;
   float: right;
   height: 100vh;
-  background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.2)),
-                    url("images/madrid-news.jpg");
   font-family: sans-serif
 }
+
 /*page2(left)*/
 .header3{
   width: 50%;
@@ -171,6 +170,9 @@ nav{
 .polaroid-container {
   padding: 10px;
   background-color: rgb(179, 204, 235);
+  font-family: sans-serif;
+  font-size: 15px;
+  font-weight: 700;
 }
 /*page4*/
 .club-image-container {
@@ -206,14 +208,9 @@ nav{
   opacity: 0.3;
 }
 
-.footer{
-  background-color: black;
-  width: 100%;
-  height: 100vh;
-}
+
 
 @media (max-width:650px) {
-  
   .logo{
     opacity: 0;
   }
